# unity-python-sock

./: .gitignore
python-client/: README.md  pyproject.toml  sock_server.py  sock_server_test.py
python-client/commands/: control.py  core.py
python-client/src/unity_python_sock/: sock_server.py
python-client/src/unity_python_sock/commands/: __init__.py  control.py  core.py  list.py  next.py  ping.py  previous.py  transfer.py
python-client/tests/: sock_server_test.py
unity-client/Assets/: SimpleSocketClient.cs  SocketClient.cs  SocketClientManager.cs
unity-client/Assets/Scenes/: SampleScene.unity
unity-client/ProjectSettings/: ProjectSettings.asset
